# pycambia

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  bump-version.yml  main.yml  python-package.yml
cambia-core/src/: handler.rs
cambia-core/src/parser/: eac_parser.rs
python/cambia/: __init__.py  _cambia.pyi
src/: lib.rs  main.rs  py_classes.rs  util.rs
test/: test_cambia.py
tests/: conftest.py  test_cambia.py  test_integration.py  test_parse_logs.py  test_unrecognized.py
